k8s-yaml/traefik/example1/app_nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: app-nginx-service
spec:
  #type: NodePort
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: app-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-nginx
  template:
    metadata:
      labels:
        app: app-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.3
        ports:
        - containerPort: 80
