k8s-yaml/traefik/example1/IngressRoute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-nginx

spec:
  entryPoints:
    - app-nginx
  routes:
  - match: Host('localhost') && PathPrefix('/own')
    kind: Rule
    priority: 12
    services:
    - name: app-nginx-service
      port: 80
      weight: 1
      passHostHeader: true
      responseForwarding:
        flushInterval: 100ms
