k8s-yaml/traefik/example1/ingress_to_app-nginx.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /nginx
        backend:
          serviceName: app-nginx-service
          servicePort: 80
